src/test/ui/parser/trait-object-polytrait-priority.stderr
error[E0178]: expected a path on the left-hand side of `+`, not `&for<'a> Trait<'a>`
  --> $DIR/trait-object-polytrait-priority.rs:6:12
   |
LL |     let _: &for<'a> Trait<'a> + 'static;
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: try adding parentheses: `&(for<'a> Trait<'a> + 'static)`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0178`.
